--- a/morgane.html
+++ b/morgane.html
@@ -11,7 +11,7 @@
       <h2>My biggest fear:</h2>
       <h1>JOBCENTER</h1>
       <div class="container">
-        <section><img src="/img/jobcenter.jpg" alt="" /></section>
+        <section><img src="/jobcenter.jpg" alt="" /></section>
         <section><ul><li>Always give you appointments when you don't have time</li>
             <li>Their letters never arrive (unless it's totally unimportant info)</li>
             <li>Want you to work jobs that you can't do</li>
