--- a/morgane.html
+++ b/morgane.html
@@ -12,18 +12,31 @@
       <h1>JOBCENTER</h1>
       <div class="container">
         <section><img src="/jobcenter.jpg" alt="" /></section>
-        <section><ul><li>Always give you appointments when you don't have time</li>
-            <li>Their letters never arrive (unless it's totally unimportant info)</li>
+        <section>
+          <ul>
+            <li>Always give you appointments when you don't have time</li>
+            <li>
+              Their letters never arrive (unless it's totally unimportant info)
+            </li>
             <li>Want you to work jobs that you can't do</li>
             <li>Don't want to give you jobs you want to do</li>
             <li>When you get a job: still unhappy somehow!!??</li>
-            <li>Very bad interior design</li> 
-        </ul></section>
-        <section><h3>How I'm overcoming it:</h3>
-        <ul><li>Knowing my rights (they don't but will always pretend they do)</li>
-        <li>Going to appointments with someone to support me</li>
-        <li>DeepL (Überhochdeutsch letters I'm not afraid of you!)</li>
-    <li>Getting better than them at german bureaucracy (high-level task)</li></ul></section>
+            <li>Very bad interior design</li>
+          </ul>
+        </section>
+        <section>
+          <h3>How I'm overcoming it:</h3>
+          <ul>
+            <li>
+              Knowing my rights (they don't but will always pretend they do)
+            </li>
+            <li>Going to appointments with someone to support me</li>
+            <li>DeepL (Überhochdeutsch letters I'm not afraid of you!)</li>
+            <li>
+              Getting better than them at german bureaucracy (high-level task)
+            </li>
+          </ul>
+        </section>
       </div>
     </main>
   </body>
