--- a/javier.html
+++ b/javier.html
@@ -23,7 +23,7 @@
         </a>
       </section>
       
-      <section class="reason2 javier">
+      <section class="reason2 Javier">
         <h2>Fear</h2>
         <!-- Reason heading -->
         <p>
@@ -31,7 +31,7 @@
         </p>
       </section>
 
-      <section class="reason2 javier">
+      <section class="reason2 Javier">
         <h2>Managing</h2>
         <!-- Reason heading -->
         <p>I don't solve it.</p>
